--- a/rust/violas-client/Cargo.toml
+++ b/rust/violas-client/Cargo.toml
@@ -22,7 +22,7 @@ rustyline = "6.2.0"
 rust_decimal = "1.7.0"
 num-traits = "0.2.12"
 reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], default-features = false }
-serde = { version = "1.0.114", features = ["derive"] }
+serde = { version = "=1.0.117", features = ["derive"] }
 tokio = { version = "0.2.22", features = ["full"] }
 walkdir = "2.3.1"
 bcs = "0.1.1"
