--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,5 @@
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS =   cpp/src \
+            cpp/violas_cli/src \
             java/src/jni \
             cpp/testnet/src
