Updated print format for violas cli

--- a/cpp/testnet/src/Makefile.am
+++ b/cpp/testnet/src/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS    = violas_client violas_vls violas_swap violas_crypto
+bin_PROGRAMS    = violas_deployment violas_vls violas_swap
 
 if DEBUG
     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/violas-client/target/debug    
@@ -13,10 +13,10 @@ else
     RUST_CPP_CLIENT = $(top_srcdir)/rust/violas-client/target/release/build/violas-client-c45e8aab37bfb9f5/out/rust_cpp/cpp_closures.o     
 endif      
 
-violas_client_SOURCES = violas_client.cpp 
-violas_client_CXXFLAGS = -std=c++17 -I$(top_srcdir)/cpp/include -I$(top_srcdir)/rust/violas-client/src/ffi
-violas_client_LDFLAGS = -Wl,-rpath=./lib,-rpath=../lib,-rpath=/usr/local/lib -L../../src/.libs $(CLIENT_PROXY_PATH)
-violas_client_LDADD = -lviolas_client -lviolas_sdk $(RUST_CPP_CLIENT) 
+violas_deployment_SOURCES = violas_deployment.cpp 
+violas_deployment_CXXFLAGS = -std=c++17 -I$(top_srcdir)/cpp/include -I$(top_srcdir)/rust/violas-client/src/ffi
+violas_deployment_LDFLAGS = -Wl,-rpath=./lib,-rpath=../lib,-rpath=/usr/local/lib -L../../src/.libs $(CLIENT_PROXY_PATH)
+violas_deployment_LDADD = -lviolas_client -lviolas_sdk $(RUST_CPP_CLIENT) 
 
 violas_vls_SOURCES = violas_vls.cpp 
 violas_vls_CXXFLAGS = -std=c++17 -I$(top_srcdir)/cpp/include -I$(top_srcdir)/rust/violas-client/src/ffi
@@ -27,8 +27,3 @@ violas_swap_SOURCES = violas_swap.cpp
 violas_swap_CXXFLAGS = -std=c++17 -I$(top_srcdir)/cpp/include -I$(top_srcdir)/rust/violas-client/src/ffi
 violas_swap_LDFLAGS = -Wl,-rpath=./lib,-rpath=../lib,-rpath=/usr/local/lib -L../../src/.libs $(CLIENT_PROXY_PATH)
 violas_swap_LDADD = -lviolas_client -lviolas_sdk $(RUST_CPP_CLIENT)
-
-violas_crypto_SOURCES = violas_crypto.cpp 
-violas_crypto_CXXFLAGS = -std=c++17 -I$(top_srcdir)/cpp/include -I$(top_srcdir)/rust/violas-client/src/ffi
-violas_crypto_LDFLAGS = -Wl,-rpath=./lib,-rpath=../lib,-rpath=/usr/local/lib -L../../src/.libs $(CLIENT_PROXY_PATH)
-violas_crypto_LDADD = -lviolas_client -lviolas_sdk $(RUST_CPP_CLIENT)
