--- a/rust/violas-oracle/Cargo.toml
+++ b/rust/violas-oracle/Cargo.toml
@@ -23,8 +23,8 @@ structopt = "0.3"
 daemonize = "0.4"
 chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
 
-diem-types = { path = "../../../Violas/types", version = "0.1.0" }
-violas-client = { path = "../violas-client", version = "0.1.0" }
+diem-types = { path = "../../../Violas/types" }
+violas-client = { path = "../violas-client" }
 
 #libra-json-rpc = { path = "../../../Violas/json-rpc", version = "0.1.0"}
 
