Cpp compiler updates to clang++ 12.0.1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,7 +70,10 @@
         "concepts": "cpp",
         "ranges": "cpp",
         "stop_token": "cpp",
-        "*.cuh": "cpp"
+        "*.cuh": "cpp",
+        "numbers": "cpp",
+        "hash_set": "cpp",
+        "unordered_set": "cpp"
     },
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": false,
