--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/cpp/build/deployment/deployment",
             "args": [
                 "-u",
-                "http://localhost:40079",
+                "http://localhost:37591",
                 "-m",
                 "/tmp/diem/mint.key",
                 "-w",
@@ -20,9 +20,9 @@
                 "-c",
                 "2",
                 "-n",
-                "mnemonic/dep.mne"
+                "cpp/testnet/mnemonic/nft.mne"
             ],
-            "cwd": "${workspaceFolder}/cpp/build"
+            "cwd": "${workspaceFolder}"
         },
         {
             "name": "(gdb) Launch Test BCS",
