--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,8 @@
         "*.cuh": "cpp",
         "numbers": "cpp",
         "hash_set": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "*.ipp": "cpp"
     },
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": false,
