--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(violas_sdk violas_sdk2.cpp json_rpc.cpp)
+add_library(violas_sdk violas_sdk2.cpp json_rpc.cpp console.cpp)
 
 # target_link_libraries(violas_client)
 
