--- a/cpp/sdk/CMakeLists.txt
+++ b/cpp/sdk/CMakeLists.txt
@@ -2,12 +2,14 @@
 #aux_source_directory(src SRC)
 #add_library(violas_sdk SHARED ${SRC} )
 
-add_library(violas_sdk SHARED src/violas_sdk2.cpp src/json_rpc.cpp src/console.cpp src/nft.cpp)
+add_library(violas_sdk SHARED src/violas_sdk2.cpp src/json_rpc.cpp src/console.cpp)
 
 # target_link_libraries(violas_client)
 
 install(TARGETS violas_sdk DESTINATION lib)
 install(FILES include/violas_sdk2.hpp DESTINATION include)
+install(FILES include/nft.hpp DESTINATION include)
+install(FILES include/nft.cpp DESTINATION include)
 #install(FILES ../../rust/violas-client/target/release/libviolas_client.so DESTINATION lib)
 
 IF(CMAKE_BUILD_TYPE MATCHES "Debug")
