--- a/rust/violas-oracle/Cargo.toml
+++ b/rust/violas-oracle/Cargo.toml
@@ -22,6 +22,7 @@ serde_derive = "1.0"
 structopt = "0.3"
 daemonize = "0.4"
 chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
+jsonrpc-http-server = "18.0.0"
 
 diem-types = { path = "../../../Violas/types" }
 violas-client = { path = "../violas-client" }
