Updated cpp module ed25519

--- a/cpp/sdk/CMakeLists.txt
+++ b/cpp/sdk/CMakeLists.txt
@@ -2,7 +2,7 @@
 #aux_source_directory(src SRC)
 #add_library(violas_sdk SHARED ${SRC} )
 
-add_library(violas_sdk SHARED src/violas_sdk2.cpp src/json_rpc.cpp src/console.cpp)
+add_library(violas_sdk SHARED src/violas_sdk2.cpp src/json_rpc.cpp src/console.cpp src/ed25519 src/violas_client2.cpp)
 
 # target_link_libraries(violas_client)
 
