added support for c++ 20 corotine while compiling by g++

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,8 @@
         "unordered_set": "cpp",
         "*.ipp": "cpp",
         "csignal": "cpp",
-        "semaphore": "cpp"
+        "semaphore": "cpp",
+        "coroutine": "cpp"
     },
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": false,
