--- a/cpp/sdk/CMakeLists.txt
+++ b/cpp/sdk/CMakeLists.txt
@@ -1,6 +1,7 @@
 #include_directories(/usr/lib/jvm/java-11-openjdk-amd64/include /usr/lib/jvm/java-11-openjdk-amd64/include/linux)
 #aux_source_directory(src SRC)
 #add_library(violas_sdk SHARED ${SRC} )
+set(CMAKE_EXE_LINKER_FLAGS  -Wl,-rpath=./lib)
 
 add_library(violas_sdk SHARED src/violas_sdk2.cpp src/json_rpc.cpp src/console.cpp 
             src/ed25519 src/violas_client2.cpp src/wallet.cpp)
