fixed some issues after updating compiling clang++-14

--- a/cpp/nft-store/CMakeLists.txt
+++ b/cpp/nft-store/CMakeLists.txt
@@ -7,10 +7,10 @@
 #     link_directories(../../rust/violas-client/target/release)
 # ENDIF()
 
-set(CMAKE_CXX_COMPILER g++)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED true)
-set(CMAKE_CXX_FLAGS -fcoroutines)
+#set(CMAKE_CXX_COMPILER g++)
+#set(CMAKE_CXX_STANDARD 20)
+#set(CMAKE_CXX_STANDARD_REQUIRED true)
+#set(CMAKE_CXX_FLAGS -fcoroutines)
 
 aux_source_directory(src SRC)
 
