--- a/cpp/nft-store-2/CMakeLists.txt
+++ b/cpp/nft-store-2/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 project(nft-store-2 VERSION 1.0)
 
-set(CMAKE_CXX_COMPILER clang++-14)
+#set(CMAKE_CXX_COMPILER clang++-14)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 #set(CMAKE_CXX_FLAGS -fcoroutines)
